   new macros ECL_ADJUSTABLE_ARRAY_P and ECL_ARRAY_HAS_FILL_POINTER_P.

 - Four new command-line arguments, --encoding, --input-encoding,
   --output-encoding and --error-encoding, allow the user to change the 
   external formats of the default streams.

 - For places defined with the simple form of DEFSETF, SETF now produces
   a simpler expansion, without a surrounding LET* form.

* Bugs fixed:

 - SI:GET-LIBRARY-PATHNAME did not work properly in Windows.

 - STEP did not work properly because the bytecompiler introduced an extra
   opcode after STEPCALL.

 - --enable-slow-config works again.

ECL 9.7.1:
==========

* Printer:

 - Readtables have a new flag that makes them read-only. Function
	(si::readtable-lock readtable &optional new-flag)
   either reads the state of this flag (if NEW-FLAG is missing) or
   also sets it.

 - The compiler now uses cl_core to efficiently access certain lisp
   constants (standard packages, standard readtables, etc)

 - EXT:OUTPUT-FLOAT-INFINITY works now fine when *print-circle* is T.

 - WITH-STANDARD-IO-SYNTAX now also rebinds *print-pprint-dispatch*.

* Compiler:

 - When printing out data and reading it from a FASL file, the compiler now
   uses more strict settings avoiding usual interferences such as the user
   changing the readtable or the printing rules.

 - The compiler no longer enters the debugger when it finds an error in the
   code it compiles.

 - C:COMPILER-ERROR no longer derives from ERROR or SERIOUS-CONDITION.

 - Trapping of compiler conditions now works even for compiler errors.

 - Handlers of compiler errors can now call (ABORT). COMPILE-FILE will
   interrupt the compilation process, and the outputs values that signal
   the failure to terminate.

 - ECL no longer emits compiler notes when deleting unreachable code.

 - Compiler messages now show the offending form and file position.

 - DEFCONSTANT only had the expected compile-time side effects in the bytecodes