@@ -319,6 +319,7 @@ dnl Checks for libraries
 
 LIBS="${LIBS} -lm"
 AC_CHECK_LIB(sun, getpwnam)         # on IRIX adds -lsun
+AC_CHECK_LIB(ffi, ffi_call)
 AC_ISC_POSIX
 
 dnl ----------------------------------------------------------------------
